# Notepad

./: CMakeLists.txt  LICENSE  gtk-notepad.c  gtk-notepad.h
